# TicTacToeUltimate

./: CMakeLists.txt  README.md
exec/: CMakeLists.txt  _test.cpp
src/: CMakeLists.txt  board.cpp  board.hpp  utils.cpp  utils.hpp
